[gd_scene load_steps=8 format=2]

[ext_resource path="res://NEAT_usability/fonts/dynamics/roboto-black-italic.tres" type="FontFile" id=1]
[ext_resource path="res://demos/demo_loader/demo_completed_splash.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PackedFloat32Array( 0, 0.896774 )
colors = PackedColorArray( 0.529412, 0.192157, 0.541176, 1, 0.333333, 0.454902, 0.705882, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="DemoCompletedSplash" type="Control"]
anchor_left = 0.280469
anchor_top = 0.316667
anchor_right = 0.719531
anchor_bottom = 0.683333
offset_right = 0.400085
custom_minimum_size = Vector2( 450, 220 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.10352e-05
offset_bottom = -1.52588e-05
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoText" type="Label" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.6
offset_right = 0.400024
offset_bottom = 6.0
size_flags_horizontal = 4
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.75
anchor_right = 0.35
anchor_bottom = 0.9
offset_left = 0.0800018
offset_top = 0.019989
offset_right = -0.142395
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/pressed = SubResource( 3 )
theme_override_styles/focus = SubResource( 3 )
theme_override_styles/disabled = SubResource( 3 )
theme_override_styles/normal = SubResource( 3 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0.823529, 0.823529, 0.823529, 1 )
theme_override_colors/font_pressed_color = Color( 0.623529, 0.623529, 0.623529, 1 )
text = "Return to demos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="."]
anchor_left = 0.433
anchor_top = 0.75
anchor_right = 0.95
anchor_bottom = 0.9
offset_left = 0.0800018
offset_top = 0.019989
offset_right = -0.142395
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/pressed = SubResource( 3 )
theme_override_styles/focus = SubResource( 3 )
theme_override_styles/disabled = SubResource( 3 )
theme_override_styles/normal = SubResource( 3 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0.823529, 0.823529, 0.823529, 1 )
theme_override_colors/font_pressed_color = Color( 0.623529, 0.623529, 0.623529, 1 )
text = "Set new Threshold and continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="."]
visible = false
anchor_left = 0.724
anchor_top = 0.75
anchor_right = 0.95
anchor_bottom = 0.9
offset_left = 0.489594
offset_right = -0.119965
theme_override_styles/hover = SubResource( 3 )
theme_override_styles/pressed = SubResource( 3 )
theme_override_styles/focus = SubResource( 3 )
theme_override_styles/disabled = SubResource( 3 )
theme_override_styles/normal = SubResource( 3 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0.823529, 0.823529, 0.823529, 1 )
theme_override_colors/font_pressed_color = Color( 0.623529, 0.623529, 0.623529, 1 )
text = "confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThresholdSetter" type="LineEdit" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.7
anchor_bottom = 0.9
offset_right = 0.280029
theme_override_styles/read_only = SubResource( 4 )
theme_override_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 225, 110 )
current = true
[connection signal="pressed" from="GoBack" to="." method="_on_GoBack_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
